# ai-news-solution

./: .copilotignore  .dockerignore  .env.example  .env.local.example  .gitignore  ARCHITECTURE.md  Dockerfile.frontend  GUIDE.md  IMPROVEMENTS.md  KNOWN-ISSUES.md  NON-RESOLVED.md  PLAN.md  PRD.md  README.md  RUNBOOK.md  docker-compose.yml  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  proxy.ts  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  vitest.config.ts
.github/: copilot-instructions.md
.github/agents/: ai-news-solutions.agent.md
.github/instructions/: api-routes.instructions.md  migrations.instructions.md  pipeline.instructions.md  react-components.instructions.md  scrapers.instructions.md
.github/reviews/: 2026-04-17-docker-fixes.md  2026-04-17-full-audit.md
app/: layout.tsx  page.tsx
components/: article-card.tsx  auth-buttons.tsx  code-block.tsx  command-palette.tsx  email-subscribe.tsx  news-feed.tsx  watchlist-manager.tsx
e2e/: navigation.spec.ts
lib/: auth.ts  database.types.ts  guards.ts  rate-limit.ts  supabase.ts
worker/: .dockerignore  .env.example  Dockerfile  celery_app.py  db.py  embed_server.py  logging_config.py  main.py  pyproject.toml  requirements.txt
worker/pipeline/: graph.py
worker/scrapers/: arxiv.py  deepmind.py  github_trending.py  hn.py  rss.py
worker/tasks/: cleanup_db.py  process_article.py  weekly_brief.py
worker/tests/: test_embed_server.py
worker/tests/pipeline/: test_categorizer.py  test_daily_cap.py
worker/tests/scrapers/: test_arxiv.py  test_hn.py  test_rss.py
(+36 files in other folders)
